--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,20 +12,20 @@
                     <h5 class="card-title text-center">Вход</h5>
                     <form class="form-signin" th:action="@{/login}" method="post">
                         <div class="form-label-group">
-                            <label for="inputUsername">Login</label>
+                            <label for="inputUsername">Логин</label>
                             <input type="text" id="inputUsername" name="username" class="form-control"
-                                   placeholder="Login" required autofocus>
+                                   placeholder="Логин" required autofocus>
                         </div>
                         <div class="form-label-group mt-3">
-                            <label for="inputPassword">Password</label>
+                            <label for="inputPassword">Пароль</label>
                             <input type="password" id="inputPassword" name="password" class="form-control"
-                                   placeholder="Password" required>
+                                   placeholder="Пароль" required>
                         </div>
                         <!-- <div class="custom-control custom-checkbox mt-3">
                             <input type="checkbox" class="custom-control-input" id="customCheck1">
                             <label class="custom-control-label" for="customCheck1">Remember password</label>
                         </div> -->
-                        <button class="btn btn-lg btn btn-dark btn-block text-uppercase mt-3" type="submit">Войти
+                        <button class="btn btn-lg btn btn-dark btn-block text-uppercase mt-4" type="submit">Войти
                         </button>
                     </form>
                 </div>
