--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -33,7 +33,7 @@
         <div th:fragment="logout" class="logout" sec:authorize="isAuthenticated()">
             <form class="form-inline mt-2 mt-md-0" th:action="@{/logout}" method="post">
                 <!-- <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"> -->
-                <button class="btn btn-outline-danger my-2 my-sm-0" type="submit" value="Sign Out">Logout</button>
+                <button class="btn btn-outline-danger my-2 my-sm-0" type="submit" value="Sign Out">Выйти</button>
             </form>
         </div>
     </div>
