--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -60,7 +60,7 @@
                 <div class="col-lg-3 col-md-4 col-6" th:each="image : ${document.imageNames}">
                     <img th:id="'img_' + ${image}" class="img-fluid img-thumbnail mt-2"
                          style="width: 200px; height: 150px"
-                         th:src="@{'~/img/' + ${uploadPath} + ${document.filesRelativePath} + '/images/' + ${image}}" alt="">
+                         th:src="@{'~/img' + ${uploadPath} + ${document.filesRelativePath} + '/images/' + ${image}}" alt="">
                     <button th:id="'delete' +${image}" th:value="${image}" th:title="Удалить"
                             class="btn btn-sm btn-outline-danger float-none mr-3 delete">Удалить
                     </button>
